--- a/gradle/scripts/helpers.gradle
+++ b/gradle/scripts/helpers.gradle
@@ -99,6 +99,93 @@ void assertEnvironmentVariable(String propertyName) {
     }
 }
 
+
+
+String propertyString(Properties properties, String key) {
+    return $property(properties, key).toString()
+}
+
+boolean propertyBool(Properties properties, String key) {
+    return propertyString(properties, key).toBoolean()
+}
+
+int propertyInteger(Properties properties, String key){
+    return propertyString(properties, key).toInteger()
+}
+
+Collection<String> propertyStringList(Properties properties, String key) {
+    return propertyStringList(properties, key, ' ')
+}
+
 Collection<String> propertyStringList(Properties properties, String key, String delimit) {
-    return properties.getProperty(key).toString().split(delimit).findAll { !it.isEmpty() }
+    return propertyString(properties, key).split(delimit).findAll { !it.isEmpty() }
+}
+
+private Object $property(Properties properties, String key) {
+    def value = properties.getProperty(key)
+    if (value instanceof String) {
+        return interpolate(value)
+    }
+    return value
+}
+
+String interpolate(Properties properties, String value) {
+    if (value.startsWith('${{') && value.endsWith('}}')) {
+        value = value.substring(3, value.length() - 2)
+        Binding newBinding = new Binding(this.binding.getVariables())
+        newBinding.setProperty('it', this)
+        return new GroovyShell(this.getClass().getClassLoader(), newBinding).evaluate(value)
+    }
+    if (value.contains('${')) {
+        return new SimpleTemplateEngine().createTemplate(value).make(properties).toString()
+    }
+    return value
+}
+
+void assertProperty(Properties properties, String propertyName) {
+    def property = property(properties, propertyName)
+    if (property == null) {
+        throw new GradleException("Property ${propertyName} is not defined!")
+    }
+    if (property.isEmpty()) {
+        throw new GradleException("Property ${propertyName} is empty!")
+    }
+}
+
+void assertSubProperties(Properties properties, String propertyName, String... subPropertyNames) {
+    assertProperty(properties, propertyName)
+    if (propertyBool(properties, propertyName)) {
+        for (String subPropertyName : subPropertyNames) {
+            assertProperty(properties, subPropertyName)
+        }
+    }
+}
+
+void setDefaultProperty(Properties properties, String propertyName, boolean warn, defaultValue) {
+    def property = property(properties, propertyName)
+    def exists = true
+    if (property == null) {
+        exists = false
+        if (warn) {
+            project.logger.log(LogLevel.WARN, "Property ${propertyName} is not defined!")
+        }
+    } else if (property.isEmpty()) {
+        exists = false
+        if (warn) {
+            project.logger.log(LogLevel.WARN, "Property ${propertyName} is empty!")
+        }
+    }
+    if (!exists) {
+        project.setProperty(properties, propertyName, defaultValue.toString())
+    }
+}
+
+void assertEnvironmentVariable(Properties properties, String propertyName) {
+    def property = System.getenv(propertyName)
+    if (property == null) {
+        throw new GradleException("System Environment Variable $propertyName is not defined!")
+    }
+    if (property.isEmpty()) {
+        throw new GradleException("Property $propertyName is empty!")
+    }
 }
