--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,10 @@ Properties modmetadata = new Properties()
 modmetadata.load(new FileInputStream("modmetadata.properties"))
 
 apply from: 'gradle/scripts/helpers.gradle'
-assertProperty modmetadata, 'mod_version'
-assertProperty modmetadata, 'root_package'
-assertProperty modmetadata, 'mod_id'
-assertProperty modmetadata, 'mod_name'
+assertPropertyCustom modmetadata, 'mod_version'
+assertPropertyCustom modmetadata, 'root_package'
+assertPropertyCustom modmetadata, 'mod_id'
+assertPropertyCustom modmetadata, 'mod_name'
 
 assertSubProperties 'use_access_transformer', 'access_transformer_locations'
 assertSubProperties 'is_coremod', 'coremod_includes_mod', 'coremod_plugin_class_name'
@@ -196,15 +196,15 @@ tasks.named('processResources', ProcessResources).configure {
     filterList.addAll(propertyStringList('mixin_configs').collect(config -> "mixins.${config}.json" as String))
 
     var replaceProperties = [
-            mod_id: propertyString(modmetadata, 'mod_id'),
-            mod_name: propertyString(modmetadata, 'mod_name'),
-            mod_version: propertyString(modmetadata, 'mod_version'),
-            mod_description: propertyString(modmetadata, 'mod_description'),
-            mod_authors: "[${propertyStringList(modmetadata, 'mod_authors', ',').join(', ')}]",
-            mod_credits: propertyString(modmetadata, 'mod_credits'),
-            mod_url: propertyString(modmetadata, 'mod_url'),
-            mod_update_json: propertyString(modmetadata, 'mod_update_json'),
-            mod_logo_path: propertyString(modmetadata, 'mod_logo_path'),
+            mod_id: propertyStringCustom(modmetadata, 'mod_id'),
+            mod_name: propertyStringCustom(modmetadata, 'mod_name'),
+            mod_version: propertyStringCustom(modmetadata, 'mod_version'),
+            mod_description: propertyStringCustom(modmetadata, 'mod_description'),
+            mod_authors: "[${propertyStringListCustom(modmetadata, 'mod_authors', ',').join(', ')}]",
+            mod_credits: propertyStringCustom(modmetadata, 'mod_credits'),
+            mod_url: propertyStringCustom(modmetadata, 'mod_url'),
+            mod_update_json: propertyStringCustom(modmetadata, 'mod_update_json'),
+            mod_logo_path: propertyStringCustom(modmetadata, 'mod_logo_path'),
             mixin_refmap: propertyString('mixin_refmap'),
             mixin_package: propertyString('mixin_package')
 
@@ -225,11 +225,11 @@ jar {
     manifest {
         def attribute_map = [:]
         attribute_map['Specification-Version'] = '1' // We are version 1 of ourselves
-        attribute_map['Specification-Vendor'] = "[${propertyStringList(modmetadata, 'mod_authors', ',').join(', ')}]"
+        attribute_map['Specification-Vendor'] = "[${propertyStringListCustom(modmetadata, 'mod_authors', ',').join(', ')}]"
         attribute_map['ModType'] = 'CRL'
         attribute_map['Implementation-Title'] = project.name
-        attribute_map['Implementation-Version'] = propertyString(modmetadata, 'mod_version')
-        attribute_map['Implementation-Vendor'] = "[${propertyStringList(modmetadata, 'mod_authors', ',').join(', ')}]"
+        attribute_map['Implementation-Version'] = propertyStringCustom(modmetadata, 'mod_version')
+        attribute_map['Implementation-Vendor'] = "[${propertyStringListCustom(modmetadata, 'mod_authors', ',').join(', ')}]"
         attribute_map['Implementation-Timestamp'] = new Date().format('yyyy-MM-dd\'T\'HH:mm:ssZ')
         if(propertyBool('is_coremod')){
             attribute_map['FMLCorePlugin'] = propertyString('coremod_plugin_class_name')
