--- a/gradle/scripts/helpers.gradle
+++ b/gradle/scripts/helpers.gradle
@@ -8,15 +8,15 @@ ext.interpolate = this.&interpolate as MethodClosure
 ext.assertProperty = this.&assertProperty as MethodClosure
 ext.assertSubProperties = this.&assertSubProperties as MethodClosure
 ext.setDefaultProperty = this.&setDefaultProperty as MethodClosure
-ext.assertEnvironmentVariable = this.&assertEnvironmentVariable as Properties, MethodClosure
-ext.propertyStringCustom = this.&propertyStringCustom as Properties, MethodClosure
-ext.propertyBoolCustom = this.&propertyBoolCustom as Properties, MethodClosure
-ext.propertyStringListCustom = this.&propertyStringListCustom as Properties, MethodClosure
-ext.interpolateCustom = this.&interpolateCustom as Properties, MethodClosure
-ext.assertPropertyCustom = this.&assertPropertyCustom as Properties, MethodClosure
-ext.assertSubPropertiesCustom = this.&assertSubPropertiesCustom as Properties, MethodClosure
-ext.setDefaultPropertyCustom = this.&setDefaultPropertyCustom as Properties, MethodClosure
-ext.assertEnvironmentVariableCustom = this.&assertEnvironmentVariableCustom as Properties, MethodClosure
+ext.assertEnvironmentVariable = this.&assertEnvironmentVariable as MethodClosure
+ext.propertyStringCustom = this.&propertyStringCustom as MethodClosure
+ext.propertyBoolCustom = this.&propertyBoolCustom as MethodClosure
+ext.propertyStringListCustom = this.&propertyStringListCustom as MethodClosure
+ext.interpolateCustom = this.&interpolateCustom as MethodClosure
+ext.assertPropertyCustom = this.&assertPropertyCustom as MethodClosure
+ext.assertSubPropertiesCustom = this.&assertSubPropertiesCustom as MethodClosure
+ext.setDefaultPropertyCustom = this.&setDefaultPropertyCustom as MethodClosure
+ext.assertEnvironmentVariableCustom = this.&assertEnvironmentVariableCustom as MethodClosure
 
 String propertyString(String key) {
     return $property(key).toString()
