--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
 Properties modmetadata = new Properties()
 modmetadata.load(new FileInputStream("modmetadata.properties"))
-
+def propertiesMap = [
+    "modmetadata":modmetadata
+]
 apply from: 'gradle/scripts/helpers.gradle'
 
-assertPropertyCustom modmetadata, 'mod_version'
-assertPropertyCustom modmetadata, 'root_package'
-assertPropertyCustom modmetadata, 'mod_id'
-assertPropertyCustom modmetadata, 'mod_name'
+assertPropertyCustom "modmetadata", 'mod_version'
+assertPropertyCustom "modmetadata", 'root_package'
+assertPropertyCustom "modmetadata", 'mod_id'
+assertPropertyCustom "modmetadata", 'mod_name'
 
 assertSubProperties 'use_access_transformer', 'access_transformer_locations'
 assertSubProperties 'is_coremod', 'coremod_includes_mod', 'coremod_plugin_class_name'
@@ -40,7 +42,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'java'
 apply plugin: 'org.spongepowered.mixin'
 
-version = "1.12.2-${project.modmetadata.mod_version}"
+version = "1.12.2-${project."modmetadata".mod_version}"
 group = root_package
 archivesBaseName = mod_name
 
@@ -86,7 +88,7 @@ minecraft {
 
 
             mods {
-                "${project.modmetadata.mod_id}" {
+                "${project."modmetadata".mod_id}" {
                     source sourceSets.main
                 }
             }
@@ -99,7 +101,7 @@ minecraft {
 
 
             mods {
-                "${project.modmetadata.mod_id}" {
+                "${project."modmetadata".mod_id}" {
                     source sourceSets.main
                 }
             }
@@ -197,15 +199,15 @@ tasks.named('processResources', ProcessResources).configure {
     filterList.addAll(propertyStringList('mixin_configs').collect(config -> "mixins.${config}.json" as String))
 
     var replaceProperties = [
-            mod_id: propertyStringCustom(modmetadata, 'mod_id'),
-            mod_name: propertyStringCustom(modmetadata, 'mod_name'),
-            mod_version: propertyStringCustom(modmetadata, 'mod_version'),
-            mod_description: propertyStringCustom(modmetadata, 'mod_description'),
-            mod_authors: "[${propertyStringListCustom(modmetadata, 'mod_authors', ',').join(', ')}]",
-            mod_credits: propertyStringCustom(modmetadata, 'mod_credits'),
-            mod_url: propertyStringCustom(modmetadata, 'mod_url'),
-            mod_update_json: propertyStringCustom(modmetadata, 'mod_update_json'),
-            mod_logo_path: propertyStringCustom(modmetadata, 'mod_logo_path'),
+            mod_id: propertyStringCustom("modmetadata", 'mod_id'),
+            mod_name: propertyStringCustom("modmetadata", 'mod_name'),
+            mod_version: propertyStringCustom("modmetadata", 'mod_version'),
+            mod_description: propertyStringCustom("modmetadata", 'mod_description'),
+            mod_authors: "[${propertyStringListCustom("modmetadata", 'mod_authors', ',').join(', ')}]",
+            mod_credits: propertyStringCustom("modmetadata", 'mod_credits'),
+            mod_url: propertyStringCustom("modmetadata", 'mod_url'),
+            mod_update_json: propertyStringCustom("modmetadata", 'mod_update_json'),
+            mod_logo_path: propertyStringCustom("modmetadata", 'mod_logo_path'),
             mixin_refmap: propertyString('mixin_refmap'),
             mixin_package: propertyString('mixin_package')
 
@@ -226,11 +228,11 @@ jar {
     manifest {
         def attribute_map = [:]
         attribute_map['Specification-Version'] = '1' // We are version 1 of ourselves
-        attribute_map['Specification-Vendor'] = "[${propertyStringListCustom(modmetadata, 'mod_authors', ',').join(', ')}]"
+        attribute_map['Specification-Vendor'] = "[${propertyStringListCustom("modmetadata", 'mod_authors', ',').join(', ')}]"
         attribute_map['ModType'] = 'CRL'
         attribute_map['Implementation-Title'] = project.name
-        attribute_map['Implementation-Version'] = propertyStringCustom(modmetadata, 'mod_version')
-        attribute_map['Implementation-Vendor'] = "[${propertyStringListCustom(modmetadata, 'mod_authors', ',').join(', ')}]"
+        attribute_map['Implementation-Version'] = propertyStringCustom("modmetadata", 'mod_version')
+        attribute_map['Implementation-Vendor'] = "[${propertyStringListCustom("modmetadata", 'mod_authors', ',').join(', ')}]"
         attribute_map['Implementation-Timestamp'] = new Date().format('yyyy-MM-dd\'T\'HH:mm:ssZ')
         if(propertyBool('is_coremod')){
             attribute_map['FMLCorePlugin'] = propertyString('coremod_plugin_class_name')
