--- a/gradle/scripts/helpers.gradle
+++ b/gradle/scripts/helpers.gradle
@@ -18,7 +18,15 @@ ext.assertPropertyCustom = this.&assertPropertyCustom as MethodClosure
 ext.assertSubPropertiesCustom = this.&assertSubPropertiesCustom as MethodClosure
 ext.setDefaultPropertyCustom = this.&setDefaultPropertyCustom as MethodClosure
 ext.assertEnvironmentVariableCustom = this.&assertEnvironmentVariableCustom as MethodClosure
+ext.newProperties = this.&newProperties as MethodClosure
 
+
+def propertiesMap = []
+void newProperties(String name, String file){
+    Properties v = new Properties()
+    v.load(new FileInputStream(file))
+    propertiesMap.put(name, v)
+}
 String propertyString(String key) {
     return $property(key).toString()
 }
@@ -131,7 +139,7 @@ Collection<String> propertyStringListCustom(String properties, String key, Strin
 }
 
 private Object $propertyCustom(String properties, String key) {
-    def value = project.propertiesMap.get(properties).getProperty(key)
+    def value = propertiesMap.get(properties).getProperty(key)
     if (value instanceof String) {
         return interpolate(value)
     }
@@ -146,7 +154,7 @@ String interpolateCustom(String properties, String value) {
         return new GroovyShell(this.getClass().getClassLoader(), newBinding).evaluate(value)
     }
     if (value.contains('${')) {
-        return new SimpleTemplateEngine().createTemplate(value).make(project.propertiesMap.get(properties)).toString()
+        return new SimpleTemplateEngine().createTemplate(value).make(propertiesMap.get(properties)).toString()
     }
     return value
 }
