--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,10 @@
-Properties modmetadata = new Properties()
-modmetadata.load(new FileInputStream("modmetadata.properties"))
-def propertiesMap = [
-    "modmetadata" : modmetadata
-]
 apply from: 'gradle/scripts/helpers.gradle'
+newProperties("modmetadata", "modmetadata.properties")
 
-ext.assertPropertyCustom "modmetadata", 'mod_version'
-ext.assertPropertyCustom "modmetadata", 'root_package'
-assertPropertyCustom "modmetadata", 'mod_id'
-assertPropertyCustom "modmetadata", 'mod_name'
+assertPropertyCustom("modmetadata", "mod_version")
+assertPropertyCustom("modmetadata", "root_package")
+assertPropertyCustom("modmetadata", "mod_id")
+assertPropertyCustom("modmetadata", "mod_name")
 
 assertSubProperties 'use_access_transformer', 'access_transformer_locations'
 assertSubProperties 'is_coremod', 'coremod_includes_mod', 'coremod_plugin_class_name'
