--- a/gradle/scripts/helpers.gradle
+++ b/gradle/scripts/helpers.gradle
@@ -19,13 +19,16 @@ ext.assertSubPropertiesCustom = this.&assertSubPropertiesCustom as MethodClosure
 ext.setDefaultPropertyCustom = this.&setDefaultPropertyCustom as MethodClosure
 ext.assertEnvironmentVariableCustom = this.&assertEnvironmentVariableCustom as MethodClosure
 ext.newProperties = this.&newProperties as MethodClosure
-
+ext.getProperties = this.&getProperties as MethodClosure
 
 def propertiesMap = []
 void newProperties(String name, String file){
     Properties v = new Properties()
     v.load(new FileInputStream(file))
     propertiesMap.put(name, v)
+}
+Properties getProperties(String name){
+    return propertiesMap.get(name)
 }
 String propertyString(String key) {
     return $property(key).toString()
