--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 apply from: 'gradle/scripts/helpers.gradle'
 newProperties("modmetadata", "modmetadata.properties")
+Properties modmetadata = getProperties("modmetadata")
 
 assertPropertyCustom("modmetadata", "mod_version")
 assertPropertyCustom("modmetadata", "root_package")
