--- a/gradle/scripts/helpers.gradle
+++ b/gradle/scripts/helpers.gradle
@@ -21,14 +21,6 @@ ext.assertEnvironmentVariableCustom = this.&assertEnvironmentVariableCustom as M
 ext.newProperties = this.&newProperties as MethodClosure
 ext.getProperties = this.&getProperties as MethodClosure
 
-void newProperties(String name, String file){
-    Properties v = new Properties()
-    v.load(new FileInputStream(file))
-    project.propertiesMap.put(name, v)
-}
-Properties getProperties(String name){
-    return project.propertiesMap.get(name)
-}
 String propertyString(String key) {
     return $property(key).toString()
 }
@@ -120,35 +112,35 @@ void assertEnvironmentVariable(String propertyName) {
 
 
 
-String propertyStringCustom(String properties, String key) {
+String propertyStringCustom(Properties properties, String key) {
     return $propertyCustom(properties, key).toString()
 }
 
-boolean propertyBoolCustom(String properties, String key) {
+boolean propertyBoolCustom(Properties properties, String key) {
     return propertyStringCustom(properties, key).toBoolean()
 }
 
-int propertyIntegerCustom(String properties, String key){
+int propertyIntegerCustom(Properties properties, String key){
     return propertyStringCustom(properties, key).toInteger()
 }
 
-Collection<String> propertyStringListCustom(String properties, String key) {
+Collection<String> propertyStringListCustom(Properties properties, String key) {
     return propertyStringListCustom(properties, key, ' ')
 }
 
-Collection<String> propertyStringListCustom(String properties, String key, String delimit) {
+Collection<String> propertyStringListCustom(Properties properties, String key, String delimit) {
     return propertyStringCustom(properties, key).split(delimit).findAll { !it.isEmpty() }
 }
 
-private Object $propertyCustom(String properties, String key) {
-    def value = project.propertiesMap.get(properties).getProperty(key)
+private Object $propertyCustom(Properties properties, String key) {
+    def value = properties.getProperty(key)
     if (value instanceof String) {
         return interpolate(value)
     }
     return value
 }
 
-String interpolateCustom(String properties, String value) {
+String interpolateCustom(Properties properties, String value) {
     if (value.startsWith('${{') && value.endsWith('}}')) {
         value = value.substring(3, value.length() - 2)
         Binding newBinding = new Binding(this.binding.getVariables())
@@ -156,12 +148,12 @@ String interpolateCustom(String properties, String value) {
         return new GroovyShell(this.getClass().getClassLoader(), newBinding).evaluate(value)
     }
     if (value.contains('${')) {
-        return new SimpleTemplateEngine().createTemplate(value).make(project.propertiesMap.get(properties)).toString()
+        return new SimpleTemplateEngine().createTemplate(value).make(properties).toString()
     }
     return value
 }
 
-void assertPropertyCustom(String properties, String propertyName) {
+void assertPropertyCustom(Properties properties, String propertyName) {
     def property = propertyCustom(properties, propertyName)
     if (property == null) {
         throw new GradleException("Property ${propertyName} is not defined!")
@@ -171,7 +163,7 @@ void assertPropertyCustom(String properties, String propertyName) {
     }
 }
 
-void assertSubProperties(String properties, String propertyName, String... subPropertyNames) {
+void assertSubProperties(Properties properties, String propertyName, String... subPropertyNames) {
     assertProperty(properties, propertyName)
     if (propertyBool(properties, propertyName)) {
         for (String subPropertyName : subPropertyNames) {
@@ -180,7 +172,7 @@ void assertSubProperties(String properties, String propertyName, String... subPr
     }
 }
 
-void setDefaultProperty(String properties, String propertyName, boolean warn, defaultValue) {
+void setDefaultProperty(Properties properties, String propertyName, boolean warn, defaultValue) {
     def property = property(properties, propertyName)
     def exists = true
     if (property == null) {
@@ -199,7 +191,7 @@ void setDefaultProperty(String properties, String propertyName, boolean warn, de
     }
 }
 
-void assertEnvironmentVariable(String properties, String propertyName) {
+void assertEnvironmentVariable(Properties properties, String propertyName) {
     def property = System.getenv(propertyName)
     if (property == null) {
         throw new GradleException("System Environment Variable $propertyName is not defined!")
